6. email domain verifier, net packages

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ go_books/cmd/main/main
 mongo_go/mongo_go
 go_postgres_stock/go_postgres_stock
 go_postgres_stock/.env
+go_email_verifier/go_email_verifier
