8. slack-bot server, slacker package

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@ go_postgres_stock/.env
 go_email_verifier/go_email_verifier
 go_slack_file/.env
 go_slack_file/go_slack_file
+go_slack_age/.env
+go_slack_age/go_slack_age
