17. Simple loadbalancer with httputils and interfaces

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,4 @@ go_fiber_crm/gorm.db
 go_fiber_hrm/go_fiber_hrm
 go_lru_cache/go_lru_cache
 go_database/go_database
+go_load_balancer/go_load_balancer
