18. csv process, channel switches, channels, stdin, timers

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,4 @@ go_fiber_hrm/go_fiber_hrm
 go_lru_cache/go_lru_cache
 go_database/go_database
 go_load_balancer/go_load_balancer
+go_quiz_csv/go_quiz_csv
