19. wit-ai, wolfram, slacker, config readings

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,5 @@ go_lru_cache/go_lru_cache
 go_database/go_database
 go_load_balancer/go_load_balancer
 go_quiz_csv/go_quiz_csv
+go_wit_wolfram_slack/.env
+go_wit_wolfram_slack/go_wit_wolfram_slack
