20. simple blockchain with golang, hashing libraries

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,4 @@ go_load_balancer/go_load_balancer
 go_quiz_csv/go_quiz_csv
 go_wit_wolfram_slack/.env
 go_wit_wolfram_slack/go_wit_wolfram_slack
+go_simple_blockchain_book/go_simple_blockchain_book
