--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,5 @@ go_wit_wolfram_slack/.env
 go_wit_wolfram_slack/go_wit_wolfram_slack
 go_simple_blockchain_book/go_simple_blockchain_book
 go_reminder_cli/go_reminder_cli
+go_wrap_string/example-import-commented.js
+go_wrap_string/go_wrap_string
