23. simple website crawler

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,4 @@ go_simple_blockchain_book/go_simple_blockchain_book
 go_reminder_cli/go_reminder_cli
 go_wrap_string/example-import-commented.js
 go_wrap_string/go_wrap_string
+go_guardian_scraper/go_guardian_scrapper
