24. Sitemap crawler with channels and go routines

--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,4 @@ go_reminder_cli/go_reminder_cli
 go_wrap_string/example-import-commented.js
 go_wrap_string/go_wrap_string
 go_guardian_scraper/go_guardian_scrapper
+go_sitemap_crawler/go_sitemap_crawler
