--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,4 @@ go_wrap_string/example-import-commented.js
 go_wrap_string/go_wrap_string
 go_guardian_scraper/go_guardian_scrapper
 go_sitemap_crawler/go_sitemap_crawler
+go_bing_scraper/go_bing_scraper
