27. Cli website checker

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,4 @@ go_sitemap_crawler/go_sitemap_crawler
 go_bing_scraper/go_bing_scraper
 go_stock_scraper/go_stock_scraper
 go_stock_scraper/stock.csv
+go_website_checker/go_website_checker
