--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,4 @@ go_bing_scraper/go_bing_scraper
 go_stock_scraper/go_stock_scraper
 go_stock_scraper/stock.csv
 go_website_checker/go_website_checker
+gopl/gopl
