--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,10 @@ gopl/lissajous/out.gif
 gopl/mandelbrot/mandlebrot.png
 gopl/server2/server2
 gopl/surface/surface.svg
+gopl/expand/expand
+gopl/fetch/fetch
+gopl/findlinks1/findlinks1
+gopl/linksave/linksave
+gopl/outline2/outline2
+gopl/xkcd/index.index
+go.dev/
