--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,11 @@ gopl/xkcd/index.index
 go.dev/
 gopl/eval/eval
 gopl/eval/parse_.go
+go_react_calorie_tracker/server/go_react_calorie_tracker
+gopl/clock1/clock1
+gopl/clock1/clock1
+gopl/clock2/clock2
+gopl/clockwall/clockwall
+gopl/ftp/ftp
+gopl/ftpClient/ftpClient
+gopl/netcat1/netcat1
